--- a/new1.html
+++ b/new1.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>du an 3</title>
+    <title>Document</title>
   </head>
   <body>
-    <h1>dự án quần áo</h1>
-    <h2>sửa lần 1</h2>
-    <h3>sửa đổi lần 3</h3>
+    <h1>news</h1>
   </body>
 </html>
